fix sidebar scroll + slim scrollbars + inline css

--- a/docs/src/styles/markdown.css
+++ b/docs/src/styles/markdown.css
@@ -11,6 +11,7 @@
     border-radius: 0.5rem;
     padding: 0.75rem;
     margin-bottom: 0.75rem !important;
+    overflow: auto;
 }
 
 .markdown code {
